# Icecast-Server

./: configure.ac
doc/: Makefile.am
src/: Makefile.am  admin.c  client.c  client.h  connection.c  fserve.c  util.c  xslt.c
