## Process this file with automake to produce Makefile.in

docdir = $(datadir)/doc/$(PACKAGE)

htmldir = $(docdir)

# Main files
nobase_html_DATA = \
admin-interface.html \
auth.html \
changes.html \
faq.html \
introduction.html \
relaying.html \
win32.html \
basic-setup.html \
config-file.html \
glossary.html \
index.html \
server-stats.html \
yp.html

# Images
nobase_html_DATA += \
img/listener_auth1.png \
img/listener_auth2.png \
img/listener_auth3.png \
img/masterslave.png \
img/relay.png

# Assets
nobase_html_DATA += \
assets/css/style.css \
assets/img/xiph-community.svg \
assets/font/FiraMono-Bold.eot \
assets/font/FiraMono-Bold.woff \
assets/font/FiraMono-Regular.eot \
assets/font/FiraMono-Regular.woff \
assets/font/FiraSans-Bold.eot \
assets/font/FiraSans-Bold.woff \
assets/font/FiraSans-BoldItalic.eot \
assets/font/FiraSans-BoldItalic.woff \
assets/font/FiraSans-Italic.eot \
assets/font/FiraSans-Italic.woff \
assets/font/FiraSans-Regular.eot \
assets/font/FiraSans-Regular.woff


EXTRA_DIST = $(nobase_html_DATA)
